--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry including="**/*.java" kind="src" path="src/main/java"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/org/apache/xmlbeans/xmlbeans/2.6.0/xmlbeans-2.6.0.jar"/>
+	<classpathentry exported="true" kind="var" path="M2_REPO/org/jdatepicker/jdatepicker/1.3.4/jdatepicker-1.3.4.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/commons-logging/commons-logging/1.2/commons-logging-1.2.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/org/apache/poi/poi/3.11/poi-3.11.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/org/apache/poi/poi-ooxml/3.11/poi-ooxml-3.11.jar" sourcepath="/M2_REPO/org/apache/poi/poi/3.11/poi-3.11.jar"/>
